3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/button.c:  Fix do_mood_floor() to look at all objects on space for
   something to effect, not just things above the moodfloor.
server/attack.c: Add missing check to make sure the plugin exists before
   we try to access the plugin function.
common/readlable.c: Fix crash caused by passing null value to mon_desc -
   check for non null was at end of { } do loop - check should be at the
   start.
server/monster.c: Make it so that monsters with see invisible are not
   immune to blind - monster can be given appropriate resistance to make
   it so it is not effected by blind.
MSW 2002-09-11

server/main.c: Move #endif in crypt_string to more proper place.
server/monster.c: Fix bad if statement that may have been waking up
    monsters when they shouldn't have been.
MSW 2002-09-03

This change mostly deals with improving behaviour of pet monstes.
Most of the code is from K. Reinert - however, I did some code cleanup/
fixes related to pet monsters, so it is difficult to note where
each piece of code came from.  One thing this does fix is handling of
multipart pets - these now work properly.
common/map.c: Update comment for get_rangevector() - no code change.
common/object.c: Add get_search_arr() which is used in pet monster code.
   This returns a semi random scrambling of the freearr array.
doc/Developers/protocol: Update documentation about map1a protocol command.
include/libproto.h, include/sproto.h: rebuilt.
server/attack.c: Have drain attacks return 1 damage so that it is clear
   that you are actually hitting your opponent.  Otherwise, you would
   get messages that 'you missed xyz', even though you are draining it.