@@ -52,7 +52,7 @@ the 'x.y' format.
    configure stage, there is little point in going further
 
    If you want the python plugin support, you will likely need to
-   add the --with-includes=/usr/include/pythonX.Y, where X.Y will vary
+   add the --with-includes=-I/usr/include/pythonX.Y, where X.Y will vary
    depending on the version of python installed on your system.
 
 3) Run 'make depend'.  This should prevent any inconsistent data and
